add main section and search bar

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/stylesheet.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
     integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous" />
 </head>
 
 <body class="bg-body">
   <div class="main-container">
-    <nav class="row navbar container-fluid m-0 fixed-top">
+    <nav class="row navbar container-fluid m-0">
 
       <span class="logo-img col-1 col-md-1 col-lg-1 d-flex justify-content-center">
         <img src="./images/logo.png" alt="Logo">
@@ -37,7 +38,22 @@
         <li Class="px-2 d-none d-md-block d-lg-none"><a href="#"><i class="fas fa-bars"></i></a></li>
       </ul>
     </nav>
+    <main class="container-fluid">
+      <div class="row main-bg m-0 mx-0 px-0">
+        <div class="brand col-12 d-flex justify-content-center">
+          <img class="logo-img-1" src="./images/logo.png" alt="logo">
+          <h2 class="h3 logo-name font-weight-bold text-white p-1">JC Music Store</h2>
+        </div>
+        <div class="searchbox col-12 d-flex flex-column justify-content-center">
+          <h5 class="text-white text-center p-1">Hi. What are you looking for today?</h5>
+          <div class="search-bar row d-flex justify-content-center">
+            <input class="bg-transparent border-white rounded w-25" type="text" placeholder="Search" />
+            <a class="bttn-icon p-2" href="#"><i class="fas fa-search"></i></a>
+          </div>
+        </div>
 
+      </div>
+    </main>
 
   </div>
 </body>
