add sign in structure

--- a/index.html
+++ b/index.html
@@ -178,7 +178,14 @@
         </div>
       </section>
       <section class="bottom-section">
-        <div></div>
+        <div class="sign-in">
+          <h3>SIGN UP FOR OUR EMAIL</h3>
+          <p>GET THE BEST DEALS, SALES AND OFFERS FROM THE BEST ONLINE MUSIC STORE IN AUSTRALIA!</p>
+          <input class="bg-transparent border-bottom-danger w-25" type="text" placeholder="Enter your email address" />
+          <button type="button" class="bttn-icon p-2 btn-outline-light bg-gradient-light">
+            <p class="subscribe-bttn">SUBSCRIBE</p>
+          </button>
+        </div>
         <div></div>
       </section>
     </main>
