add brands at bottom section

--- a/index.html
+++ b/index.html
@@ -186,7 +186,22 @@
             <p class="subscribe-bttn">SUBSCRIBE</p>
           </button>
         </div>
-        <div></div>
+        <div class="brands">
+          <ul class="row d-flex">
+            <li class="col-6 col-md-3 col-lg-2"><a href="#"></a><img
+                src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Yamaha.jpg" alt="yamaha"></li>
+            <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
+                src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Roland.jpg" alt="roland"></li>
+            <li class="col-6 col-md-3 col-lg-2"><a href="#"></a><img
+                src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Fender.jpg" alt="fender"></li>
+            <li class="d-none d-md-block col-md-3 d-lg-block col-lg-2"><a href="#"></a><img
+                src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Gibson.jpg" alt="gibson"></li>
+            <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
+                src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Ibanez.jpg" alt="ibanez"></li>
+            <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
+                src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Taylor.jpg" alt="taylor"></li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer>
