add adjustments on navbar main sections and bottom section

--- a/index.html
+++ b/index.html
@@ -24,31 +24,32 @@
 </head>
 
 <body class="bg-body">
-  <div class="main-container w-100 px-0">
+  <div class="main-container container-fluid p-0 m-0">
     <nav class="row navbar w-100 container-fluid mx-0 p-0 fixed-top">
-      <div class="logo-img col-1 d-flex justify-content-center">
-        <img src="./images/logo.png" alt="Logo">
+      <div class="logo-img col-1 d-flex justify-content-center align-items-center w-50 h-50">
+        <img src=" ./images/logo.png" alt="Logo">
       </div>
-      <ul class="col-5 d-flex justify-content-start p-0">
-        <li Class="px-2"><a href="#">Shop by category></a></li>
-        <li Class="px-2 d-none d-lg-block"><a href="#">Videos</a></li>
-        <li Class="px-2 d-none d-lg-block"><a href="#">Support</a></li>
+      <ul class="col-5 d-flex justify-content-start p-0 mb-0">
+        <li Class="px-2 font-weight-bold"><a class=" text-white" href="#">Shop by category></a></li>
+        <li Class="px-2 font-weight-bold d-none d-lg-block"><a class=" text-white" href="#">Videos</a></li>
+        <li Class="px-2 font-weight-bold d-none d-lg-block"><a class=" text-white" href="#">Support</a></li>
       </ul>
-      <ul class="col-6 d-flex justify-content-end p-0">
+      <ul class="col-6 d-flex justify-content-end p-0 mb-0">
         <li Class="px-2">
-          <a class="d-flex mt-2" href="#"><i class="fas fa-user px-3 py-2"></i>
-            <p class="d-none d-lg-block">Account</p>
+          <a class="text-white d-flex mt-1" href="#"><i class=" d-none fas fa-user px-3 py-1"></i>
+            <p class="text-white font-weight-bold d-none d-lg-block mb-0">Account</p>
           </a>
         </li>
-        <li Class="px-2"><a class="d-flex mt-2" href="#"><i class="fas fa-shopping-cart px-3 py-2"></i>
-            <p class="d-none d-lg-block">Cart</p>
+        <li Class="px-2"><a class="text-white d-flex mt-1" href="#"><i
+              class="d-none fas fa-shopping-cart px-3 py-1"></i>
+            <p class="text-white font-weight-bold d-none d-lg-block mb-0">Cart</p>
           </a></li>
-        <li Class="px-2 d-none d-md-block d-lg-none"><a class="d-flex mt-2" href="#"><i
-              class="fas fa-bars px-3 py-2"></i></a></li>
+        <li Class="px-2 d-sd-block d-md-block d-lg-none"><a class="text-white d-flex mt-1" href="#"><i
+              class="fas fa-bars px-3 py-1"></i></a></li>
       </ul>
     </nav>
     <header class="main-bg w-100 container-fluid m-0 px-0">
-      <div class="logo-img m-0 p-0">
+      <div class="logo-img m-0 p-0 d-flex justify-content-center align align-items-center">
         <img src="./images/logo.png" alt="logo">
         <h2 class="h3 logo-name font-weight-bold text-white p-1 text-center">JC Music Store</h2>
       </div>
@@ -56,8 +57,8 @@
         <h5 class="text-white text-center p-1 m-0">Hi. What are you looking for today?</h5>
         <div class="d-flex justify-content-center">
           <input class="bg-transparent border-white w-25" type="text" placeholder="Search" />
-          <button type="button" class="bttn-icon p-2 btn-outline-light bg-gradient-light"><i
-              class="fas fa-search"></i></button>
+          <button type="button" class="bttn-icon p-2 btn-outline-light bg-gradient-light"><i class="fas fa-search"></i>
+          </button>
         </div>
       </div>
     </header>
@@ -73,12 +74,12 @@
           </p>
           <p class="col-12 col-md-4 pl-md-0"><i class="text-danger fas fa-check px-2"></i>Curb Side Shopping</p>
         </div>
-        <div class="bttn-learn col-12 d-flex justify-content-center rounded mx-0 mb-3 px-0">
-          <button type="button" class="btn-danger w-23 rounded px-3">Learn More</button>
+        <div class="col-12 d-flex justify-content-center rounded mx-0 mb-3 px-0">
+          <button type="button" class="btn-danger rounded w-23 px-3 h-50">Learn More</button>
         </div>
       </section>
       <section class="shipping row w-100 m-0">
-        <ul class="row w-100 mt-3">
+        <ul class="row w-100 m-0 mt-3">
           <li class="col-12 col-md-6 col-lg-2 px-0 d-flex flex-column align-items-center"><a class="img-shipping py-2"
               href="#">
               <img
@@ -136,63 +137,66 @@
         </ul>
       </section>
       <hr>
-      <section class="category">
-        <div class="row w-100 ml-1 ">
-          <div class="electric-guitars col-sm-12 col-md-4 position-relative">
+      <section class="category w-100">
+        <div class="row w-100 ml-1 p-0 m-0">
+          <div class="electric-guitars col-sm-12 col-md-4 position-relative ">
             <img src="./images/electric guitars.jpg" alt="electric-guitar" />
             <div class="category-info position-absolute d-flex flex-column align-items-center">
               <h3 class="h5 text-danger font-weight-bold">ELECTRIC GUITARS</h3>
-              <button type="button" class="text-gray-dark bg-transparent border-light px-1">Shop now</button>
+              <button type="button" class="text-white bg-danger border-light px-1">Shop now</button>
             </div>
           </div>
           <div class="pedals col-sm-12 col-md-4">
             <img src="./images/pedals.jpg" alt="pedal" />
             <div class="category-info d-flex flex-column align-items-center">
               <h3 class="h5 text-danger font-weight-bold">PEDALS</h3>
-              <button type="button" class="text-gray-dark bg-transparent border-light px-1">Shop now</button>
+              <button type="button" class="text-white bg-danger border-light px-1">Shop now</button>
             </div>
           </div>
           <div class="acustic-guitars col-sm-12 col-md-4">
             <img src="./images/acustic guitars.jpg" alt="acustic-guitar" />
-            <div class="category-info d-flex flex-column align-items-center">
+            <div class="category-info d-flex flex-column align-items-center ">
               <h3 class="h5 text-danger font-weight-bold">ACOUSTIC GUITARS</h3>
-              <button type="button" class="text-gray-dark bg-transparent border-light px-1">Shop now</button>
+              <button type="button" class="text-white bg-danger border-light px-1">Shop now</button>
             </div>
           </div>
           <div class="bass col-sm-12 col-md-4">
             <img src="./images/bass.jpg" alt="bass" />
             <div class="category-info d-flex flex-column align-items-center">
               <h3 class="h5 text-danger font-weight-bold">BASS</h3>
-              <button type="button" class="text-gray-dark bg-transparent border-light px-1">Shop now</button>
+              <button type="button" class="text-white bg-danger border-light px-1">Shop now</button>
             </div>
           </div>
           <div class="keyboards col-sm-12 col-md-4">
             <img src="./images/keyboards.jpg" alt="keyboards" />
             <div class="category-info d-flex flex-column align-items-center">
               <h3 class="h5 text-danger font-weight-bold">kEYBOARDS</h3>
-              <button type="button" class="text-gray-dark bg-transparent border-light px-1">Shop now</button>
+              <button type="button" class="text-white bg-danger border-light px-1">Shop now</button>
             </div>
           </div>
           <div class="drum-kits col-sm-12 col-md-4">
             <img src="./images/drum kits.jpg" alt="drums" />
             <div class="category-info d-flex flex-column align-items-center">
               <h3 class="h5 text-danger font-weight-bold">DRUM KITS.</h3>
-              <button type="button" class="text-gray-dark bg-transparent border-light px-1">Shop now</button>
+              <button type="button" class="text-white bg-danger border-light px-1">Shop now</button>
             </div>
           </div>
         </div>
       </section>
-      <section class="bottom-section row w-100">
-        <div class="sign-in  w-100">
+      <section class="bottom-section container-fluid row m-0 px-0 w-100">
+        <div class="sign-in col-12 w-100 my-5 d-flex flex-column justify-content-center align-items-center">
           <h3 class="text-center">SIGN UP FOR OUR EMAIL</h3>
-          <p>GET THE BEST DEALS, SALES AND OFFERS FROM THE BEST ONLINE MUSIC STORE IN AUSTRALIA!</p>
-          <input class="bg-transparent border-bottom-danger w-25" type="text" placeholder="Enter your email address" />
-          <button type="button" class="bttn-icon p-0 w-25 bg-danger">
-            <p class="subscribe-bttn text-white">SUBSCRIBE</p>
-          </button>
+          <p class="text-center pt-1">GET THE BEST DEALS, SALES AND OFFERS FROM THE BEST ONLINE MUSIC STORE IN
+            PERU!</p>
+          <div class="d-flex justify-content-center align-items-center p-0 m-0 w-100">
+            <input class="bg-transparent border-danger rounded" type="text" placeholder="Enter your email address" />
+            <button type="button" class="bttn-icon p-0 m-0 bg-danger">
+              <p class="btn-danger border-0 w-23 px-3 h-50 text-white mb-0">Subscribe</p>
+            </button>
+          </div>
         </div>
-        <!--  <div class="brands">
-          <ul class="row d-flex">
+        <div class="brands container-fluid row m-0 px-0 w-100">
+          <ul class="row d-flex justify-content-center align-items-center">
             <li class="col-6 col-md-3 col-lg-2"><a href="#"></a><img
                 src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Yamaha.jpg" alt="yamaha"></li>
             <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
@@ -206,7 +210,7 @@
             <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
                 src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Taylor.jpg" alt="taylor"></li>
           </ul>
-        </div> -->
+        </div>
       </section>
     </main>
     <footer>
