--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       </div>
       <ul class="col-5 d-flex justify-content-start p-0 mb-0">
         <li Class="px-2 font-weight-bold"><a class=" text-white" href="#">Shop by category></a></li>
-        <li Class="px-2 font-weight-bold d-none d-lg-block"><a class=" text-white" href="#">Videos</a></li>
-        <li Class="px-2 font-weight-bold d-none d-lg-block"><a class=" text-white" href="#">Support</a></li>
+        <li Class="px-2 font-weight-bold d-none d-lg-block"><a class="text-white" href="#">Videos</a></li>
+        <li Class="px-2 font-weight-bold d-none d-lg-block"><a class="text-white" href="#">Support</a></li>
       </ul>
       <ul class="col-6 d-flex justify-content-end p-0 mb-0">
         <li Class="px-2">
-          <a class="text-white d-flex mt-1" href="#"><i class=" d-none fas fa-user px-3 py-1"></i>
+          <a class="text-white d-flex mt-1" href="#"><i class="d-none fas fa-user px-3 py-1"></i>
             <p class="text-white font-weight-bold d-none d-lg-block mb-0">Account</p>
           </a>
         </li>
@@ -48,12 +48,12 @@
               class="fas fa-bars px-3 py-1"></i></a></li>
       </ul>
     </nav>
-    <header class="main-bg w-100 container-fluid m-0 px-0">
-      <div class="logo-img m-0 p-0 d-flex justify-content-center align align-items-center">
+    <header class="main-bg w-100 container-fluid m-0 px-0 row mt-4">
+      <div class="logo-img m-0 p-0 d-flex justify-content-center align align-items-center col-12 mt-5">
         <img src="./images/logo.png" alt="logo">
         <h2 class="h3 logo-name font-weight-bold text-white p-1 text-center">JC Music Store</h2>
       </div>
-      <div class="searchbox p-0">
+      <div class="searchbox p-0 col 6 mt-5">
         <h5 class="text-white text-center p-1 m-0">Hi. What are you looking for today?</h5>
         <div class="d-flex justify-content-center">
           <input class="bg-transparent border-white w-25" type="text" placeholder="Search" />
@@ -65,14 +65,15 @@
     <main class="container-fluid px-0">
       <section class="sale-info row w-100 m-0 px-0">
         <h2 class="text-center text-white font-weight-bold col-12 m-auto">THREE GREAT WAYS TO SHOP WITH US</h2>
-        <div class="checks row w-100 text-center text-white mt-3">
-          <p class="col-12 col-md-4"><i class="text-danger fas fa-check px-2"></i>We are open for sales, repairs
+        <div class="checks row col-12 text-center text-white mt-3 px-0 mx-0">
+          <p class="col-12 col-md-4 px-0"><i class="text-danger fas fa-check px-2"></i>We are open for sales, repairs
             and rentals.
           </p>
-          <p class="col-12 col-md-4"><i class="text-danger fas fa-check px-2"></i>Online Shopping with Free Shipping
+          <p class="col-12 col-md-4 px-0"><i class="text-danger fas fa-check px-2"></i>Online Shopping with Free
+            Shipping
             (Over $99)
           </p>
-          <p class="col-12 col-md-4 pl-md-0"><i class="text-danger fas fa-check px-2"></i>Curb Side Shopping</p>
+          <p class="col-12 col-md-4 px-0"><i class="text-danger fas fa-check px-2"></i>Curb Side Shopping</p>
         </div>
         <div class="col-12 d-flex justify-content-center rounded mx-0 mb-3 px-0">
           <button type="button" class="btn-danger rounded w-23 px-3 h-50">Learn More</button>
@@ -137,67 +138,56 @@
         </ul>
       </section>
       <hr>
-      <section class="category w-100">
-        <div class="row w-100 ml-1 p-0 m-0">
-          <div class="electric-guitars col-sm-12 col-md-4 position-relative ">
-            <img src="./images/electric guitars.jpg" alt="electric-guitar" />
-            <div class="category-info position-absolute d-flex flex-column align-items-center">
-              <h3 class="h5 text-danger font-weight-bold">ELECTRIC GUITARS</h3>
-              <button type="button" class="text-white bg-danger border-light px-1">Shop now</button>
-            </div>
+      <section class="category">
+        <div class="row ml-1 p-0 m-0">
+          <div
+            class="instrument electric-guitars col-sm-12 col-md-4 d-flex flex-column align-items-center justify-content-center my-1">
+            <h3 class="h5 text-danger font-weight-bold">ELECTRIC GUITARS</h3>
+            <button type="button" class="text-white bg-danger border-0 rounded px-1">Shop now</button>
           </div>
-          <div class="pedals col-sm-12 col-md-4">
-            <img src="./images/pedals.jpg" alt="pedal" />
-            <div class="category-info d-flex flex-column align-items-center">
-              <h3 class="h5 text-danger font-weight-bold">PEDALS</h3>
-              <button type="button" class="text-white bg-danger border-light px-1">Shop now</button>
-            </div>
+          <div
+            class="instrument pedals col-sm-12 col-md-4 d-flex flex-column align-items-center justify-content-center my-1">
+            <h3 class="h5 text-danger font-weight-bold">PEDALS</h3>
+            <button type="button" class="text-white bg-danger border-0 rounded px-1">Shop now</button>
           </div>
-          <div class="acustic-guitars col-sm-12 col-md-4">
-            <img src="./images/acustic guitars.jpg" alt="acustic-guitar" />
-            <div class="category-info d-flex flex-column align-items-center ">
-              <h3 class="h5 text-danger font-weight-bold">ACOUSTIC GUITARS</h3>
-              <button type="button" class="text-white bg-danger border-light px-1">Shop now</button>
-            </div>
+          <div
+            class="instrument acustic-guitars col-sm-12 col-md-4 d-flex flex-column align-items-center justify-content-center my-1">
+            <h3 class="h5 text-danger font-weight-bold">ACOUSTIC GUITARS</h3>
+            <button type="button" class="text-white bg-danger border-0 rounded px-1">Shop now</button>
           </div>
-          <div class="bass col-sm-12 col-md-4">
-            <img src="./images/bass.jpg" alt="bass" />
-            <div class="category-info d-flex flex-column align-items-center">
-              <h3 class="h5 text-danger font-weight-bold">BASS</h3>
-              <button type="button" class="text-white bg-danger border-light px-1">Shop now</button>
-            </div>
+          <div
+            class="instrument bass col-sm-12 col-md-4 d-flex flex-column align-items-center justify-content-center my-1">
+            <h3 class="h5 text-danger font-weight-bold">BASS</h3>
+            <button type="button" class="text-white bg-danger border-0 rounded px-1">Shop now</button>
           </div>
-          <div class="keyboards col-sm-12 col-md-4">
-            <img src="./images/keyboards.jpg" alt="keyboards" />
-            <div class="category-info d-flex flex-column align-items-center">
-              <h3 class="h5 text-danger font-weight-bold">kEYBOARDS</h3>
-              <button type="button" class="text-white bg-danger border-light px-1">Shop now</button>
-            </div>
+          <div
+            class="instrument keyboards col-sm-12 col-md-4 d-flex flex-column align-items-center justify-content-center my-1">
+            <h3 class="h5 text-danger font-weight-bold">kEYBOARDS</h3>
+            <button type="button" class="text-white bg-danger border-0 rounded px-1">Shop now</button>
           </div>
-          <div class="drum-kits col-sm-12 col-md-4">
-            <img src="./images/drum kits.jpg" alt="drums" />
-            <div class="category-info d-flex flex-column align-items-center">
-              <h3 class="h5 text-danger font-weight-bold">DRUM KITS.</h3>
-              <button type="button" class="text-white bg-danger border-light px-1">Shop now</button>
-            </div>
+          <div
+            class="instrument drum-kits col-sm-12 col-md-4 d-flex flex-column align-items-center justify-content-center my-1">
+            <h3 class="h5 text-danger font-weight-bold">DRUM KITS.</h3>
+            <button type="button" class="text-white bg-danger border-0 rounded px-1">Shop now</button>
           </div>
         </div>
       </section>
       <section class="bottom-section container-fluid row m-0 px-0 w-100">
         <div class="sign-in col-12 w-100 my-5 d-flex flex-column justify-content-center align-items-center">
           <h3 class="text-center">SIGN UP FOR OUR EMAIL</h3>
-          <p class="text-center pt-1">GET THE BEST DEALS, SALES AND OFFERS FROM THE BEST ONLINE MUSIC STORE IN
+          <p class="text-center pt-2">GET THE BEST DEALS, SALES AND OFFERS FROM THE BEST ONLINE MUSIC STORE IN
             PERU!</p>
           <div class="d-flex justify-content-center align-items-center p-0 m-0 w-100">
-            <input class="bg-transparent border-danger rounded" type="text" placeholder="Enter your email address" />
-            <button type="button" class="bttn-icon p-0 m-0 bg-danger">
-              <p class="btn-danger border-0 w-23 px-3 h-50 text-white mb-0">Subscribe</p>
+            <input class="bg-transparent border-danger rounded py-1" type="text"
+              placeholder="Enter your email address" />
+            <button type="button" class="bttn-icon p-0 py-1 m-0 bg-danger border-0">
+              <p class="btn-danger w-23 px-3 h-50 text-white mb-0">Subscribe</p>
             </button>
           </div>
         </div>
-        <div class="brands container-fluid row m-0 px-0 w-100">
-          <ul class="row d-flex justify-content-center align-items-center">
-            <li class="col-6 col-md-3 col-lg-2"><a href="#"></a><img
+        <div class="brands container row m-0 px-0 w-100 col-12">
+          <ul class="row d-flex justify-content-center align-items-center col-12 px-2 my-0">
+            <li class="col-6 col-md-3 col-lg-2 pl-4"><a href="#"></a><img
                 src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Yamaha.jpg" alt="yamaha"></li>
             <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
                 src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Roland.jpg" alt="roland"></li>
@@ -214,7 +204,77 @@
       </section>
     </main>
     <footer>
-      <div>
+      <div class="top-footer">
+        <div class="col footer-content">
+          <div class="footer-col">
+            <h4>JC MUSIC STORE</h4>
+            <div class="footer-info">
+              <p>First opened over 3 years ago, JC Music Store is an Peruvian owned and operated independent music
+                store located in Lima, Peru.</p>
+              <p>We aim to provide the largest range of quality musical instruments, lowest prices and high levels of
+                customer service during and after your purchase.</p>
+              <ul class="brand-icons">
+                <li><a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#" title="Youtube"><i class="fab fa-youtube-square"></i></a></li>
+                <li><a href="#" title="Instagram"><i class="fab fa-instagram-square"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="cols">
+          <div class="footer-col">
+            <h4>About</h4>
+            <div class="footer-info">
+              <ul class="fmenu">
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Servicing & Repairs</a></li>
+                <li><a href="#">Work for us!</a></li>
+                <li><a href="#">AV Installations</a></li>
+                <li><a href="#">Schools / Education</a></li>
+                <li><a href="#">Rent Now</a></li>
+                <li><a href="#">Trade-ins</a></li>
+              </ul>
+            </div>
+
+            <div class="footer-col">
+              <h4>Support</h4>
+              <div class="footer-info">
+                <ul class="fmenu">
+                  <li><a href="#">Shipping & Returns</a></li>
+                  <li><a href="#">Payment Options</a></li>
+                  <li><a href="#">Privacy & Security</a></li>
+                  <li><a href="#">Terms & Conditions</a></li>
+                  <li><a href="#">Price Match Guarantee</a></li>
+                  <li><a href="#">My Account</a></li>
+                  <li><a href="#">COVID-19</a></li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="footer-col">
+              <h4>Contact</h4>
+              <div class="footer-info">
+                <address>Av. Larco <br>2606 <br>Australia</address>
+                <p><strong>Phone</strong> +51 2 6282 3199</p>
+                <p><strong>Fax</strong> +61 2 6282 5436</p>
+                <p><a href="#">Contact Us</a></p>
+              </div>
+            </div>
+
+            <div class="footer-col">
+              <h4>Store hours</h4>
+              <div class="footer-info">
+                <p><strong>Mon-Thur</strong> 9:00am - 5:30pm</p>
+                <p><strong>Fri</strong> 9:00am - 7:00pm</p>
+                <p><strong>Sat</strong> 9:00am - 4:00pm</p>
+                <p><strong>Sun</strong> Closed</p>
+              </div>
+            </div>
+          </div>
+          <div class="bottom-footer">
+            <p class="copyright">© 2020 JC Music Store. All rights reserved.</p>
+          </div>
+        </div>
     </footer>
   </div>
 </body>
