more adjustments style on the footer header main section and add search page

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         <li Class="px-2 font-weight-bold d-none d-lg-block"><a class="text-white" href="#">Videos</a></li>
         <li Class="px-2 font-weight-bold d-none d-lg-block"><a class="text-white" href="#">Support</a></li>
       </ul>
-      <ul class="col-6 d-flex justify-content-end p-0 mb-0">
+      <ul class="col-6 d-flex justify-content-end p-0 mb-0 pr-4">
         <li Class="px-2">
-          <a class="text-white d-flex mt-1" href="#"><i class="d-none fas fa-user px-3 py-1"></i>
+          <a class="text-white d-flex mt-1" href="#"><i class="d-none d-lg-block fas fa-user px-3 py-1"></i>
             <p class="text-white font-weight-bold d-none d-lg-block mb-0">Account</p>
           </a>
         </li>
         <li Class="px-2"><a class="text-white d-flex mt-1" href="#"><i
-              class="d-none fas fa-shopping-cart px-3 py-1"></i>
+              class="d-none d-lg-block fas fa-shopping-cart px-3 py-1"></i>
             <p class="text-white font-weight-bold d-none d-lg-block mb-0">Cart</p>
           </a></li>
         <li Class="px-2 d-sd-block d-md-block d-lg-none"><a class="text-white d-flex mt-1" href="#"><i
@@ -49,11 +49,11 @@
       </ul>
     </nav>
     <header class="main-bg w-100 container-fluid m-0 px-0 row mt-4">
-      <div class="logo-img m-0 p-0 d-flex justify-content-center align align-items-center col-12 mt-5">
+      <div class="logo-img m-0 p-0 d-flex justify-content-center align align-items-center col-12 mt-5 pt-5">
         <img src="./images/logo.png" alt="logo">
-        <h2 class="h3 logo-name font-weight-bold text-white p-1 text-center">JC Music Store</h2>
+        <h2 class="logo-name font-weight-bold text-white pt-2 px-1 text-center">JC Music Store</h2>
       </div>
-      <div class="searchbox p-0 col 6 mt-5">
+      <div class="searchbox p-0 col 6 mt-5 pt-5">
         <h5 class="text-white text-center p-1 m-0">Hi. What are you looking for today?</h5>
         <div class="d-flex justify-content-center">
           <input class="bg-transparent border-white w-25" type="text" placeholder="Search" />
@@ -64,14 +64,13 @@
     </header>
     <main class="container-fluid px-0">
       <section class="sale-info row w-100 m-0 px-0">
-        <h2 class="text-center text-white font-weight-bold col-12 m-auto">THREE GREAT WAYS TO SHOP WITH US</h2>
+        <h2 class="h3 text-center text-white font-weight-bold col-12 m-auto">THREE GREAT WAYS TO SHOP WITH US</h2>
         <div class="checks row col-12 text-center text-white mt-3 px-0 mx-0">
           <p class="col-12 col-md-4 px-0"><i class="text-danger fas fa-check px-2"></i>We are open for sales, repairs
             and rentals.
           </p>
           <p class="col-12 col-md-4 px-0"><i class="text-danger fas fa-check px-2"></i>Online Shopping with Free
-            Shipping
-            (Over $99)
+            Shipping (Over $99)
           </p>
           <p class="col-12 col-md-4 px-0"><i class="text-danger fas fa-check px-2"></i>Curb Side Shopping</p>
         </div>
@@ -175,12 +174,11 @@
       <section class="bottom-section container-fluid row m-0 px-0 w-100">
         <div class="sign-in col-12 w-100 my-5 d-flex flex-column justify-content-center align-items-center">
           <h3 class="text-center">SIGN UP FOR OUR EMAIL</h3>
-          <p class="text-center pt-2">GET THE BEST DEALS, SALES AND OFFERS FROM THE BEST ONLINE MUSIC STORE IN
+          <p class="text-center py-4">GET THE BEST DEALS, SALES AND OFFERS FROM THE BEST ONLINE MUSIC STORE IN
             PERU!</p>
           <div class="d-flex justify-content-center align-items-center p-0 m-0 w-100">
-            <input class="bg-transparent border-danger rounded py-1" type="text"
-              placeholder="Enter your email address" />
-            <button type="button" class="bttn-icon p-0 py-1 m-0 bg-danger border-0">
+            <input class="bg-transparent border-danger py-1" type="text" placeholder="Enter your email address" />
+            <button type="button" class="bttn-icon p-0 py-1 m-0 bg-danger border-danger">
               <p class="btn-danger w-23 px-3 h-50 text-white mb-0">Subscribe</p>
             </button>
           </div>
@@ -204,28 +202,29 @@
       </section>
     </main>
     <footer>
-      <div class="top-footer">
-        <div class="col footer-content">
-          <div class="footer-col">
-            <h4>JC MUSIC STORE</h4>
-            <div class="footer-info">
+      <div class="top-footer container-fluid row w-100 m-0 mt-3 px-0">
+        <div class="footer-content d-flex justify-content-center align-items-center col-sd-12  w-100 m-1">
+          <div class="footer-col px-2">
+            <h4 class="text-danger pt-3">JC MUSIC STORE</h4>
+            <div class="footer-info d-flex justify-content-center align-items-start flex-column text-white pt-2">
               <p>First opened over 3 years ago, JC Music Store is an Peruvian owned and operated independent music
                 store located in Lima, Peru.</p>
               <p>We aim to provide the largest range of quality musical instruments, lowest prices and high levels of
                 customer service during and after your purchase.</p>
-              <ul class="brand-icons">
-                <li><a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#" title="Youtube"><i class="fab fa-youtube-square"></i></a></li>
-                <li><a href="#" title="Instagram"><i class="fab fa-instagram-square"></i></a></li>
+              <ul class="brand-icons d-flex">
+                <li><a class="px-2" href="#" title="Facebook"><i class="fab fa-facebook-f text-white"></i></a></li>
+                <li><a class="px-2" href="#" title="Youtube"><i class="fab fa-youtube-square text-white"></i></a></li>
+                <li><a class="px-2" href="#" title="Instagram"><i class="fab fa-instagram-square text-white"></i></a>
+                </li>
               </ul>
             </div>
           </div>
         </div>
-        <div class="cols">
-          <div class="footer-col">
-            <h4>About</h4>
-            <div class="footer-info">
-              <ul class="fmenu">
+        <div class="cols container-fluid row w-100 m-0 px-0">
+          <div class="footer-col col-sd-12 col-md-3">
+            <h4 class="text-danger">About</h4>
+            <div class="footer-info d-none text-white d-md-block">
+              <ul class="fmenu text-white">
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Servicing & Repairs</a></li>
                 <li><a href="#">Work for us!</a></li>
@@ -235,46 +234,49 @@
                 <li><a href="#">Trade-ins</a></li>
               </ul>
             </div>
+          </div>
 
-            <div class="footer-col">
-              <h4>Support</h4>
-              <div class="footer-info">
-                <ul class="fmenu">
-                  <li><a href="#">Shipping & Returns</a></li>
-                  <li><a href="#">Payment Options</a></li>
-                  <li><a href="#">Privacy & Security</a></li>
-                  <li><a href="#">Terms & Conditions</a></li>
-                  <li><a href="#">Price Match Guarantee</a></li>
-                  <li><a href="#">My Account</a></li>
-                  <li><a href="#">COVID-19</a></li>
-                </ul>
-              </div>
-            </div>
-
-            <div class="footer-col">
-              <h4>Contact</h4>
-              <div class="footer-info">
-                <address>Av. Larco <br>2606 <br>Australia</address>
-                <p><strong>Phone</strong> +51 2 6282 3199</p>
-                <p><strong>Fax</strong> +61 2 6282 5436</p>
-                <p><a href="#">Contact Us</a></p>
-              </div>
-            </div>
-
-            <div class="footer-col">
-              <h4>Store hours</h4>
-              <div class="footer-info">
-                <p><strong>Mon-Thur</strong> 9:00am - 5:30pm</p>
-                <p><strong>Fri</strong> 9:00am - 7:00pm</p>
-                <p><strong>Sat</strong> 9:00am - 4:00pm</p>
-                <p><strong>Sun</strong> Closed</p>
-              </div>
+          <div class="footer-col col-sd-12 col-md-3">
+            <h4 class="text-danger">Support</h4>
+            <div class="footer-info d-none text-white d-md-block">
+              <ul class="fmenu text-white">
+                <li><a href="#">Shipping & Returns</a></li>
+                <li><a href="#">Payment Options</a></li>
+                <li><a href="#">Privacy & Security</a></li>
+                <li><a href="#">Terms & Conditions</a></li>
+                <li><a href="#">Price Match Guarantee</a></li>
+                <li><a href="#">My Account</a></li>
+                <li><a href="#">COVID-19</a></li>
+              </ul>
             </div>
           </div>
-          <div class="bottom-footer">
-            <p class="copyright">© 2020 JC Music Store. All rights reserved.</p>
+
+          <div class="footer-col col-sd-12 col-md-3">
+            <h4 class="text-danger">Contact</h4>
+            <div class="footer-info d-none text-white d-md-block">
+              <address>Av. Larco 2606, Miraflores</address>
+              <p><strong>Phone</strong> +51 2 6282 3199</p>
+              <p><strong>Fax</strong> +61 2 6282 5436</p>
+              <p><a href="#">Contact Us</a></p>
+            </div>
+          </div>
+
+          <div class="footer-col col.sd-12 col-md-3">
+            <h4 class="text-danger">Store hours</h4>
+            <div class="footer-info d-none text-white d-md-block">
+              <p><strong>Mon-Thur</strong> 9:00am - 5:30pm</p>
+              <p><strong>Fri</strong> 9:00am - 7:00pm</p>
+              <p><strong>Sat</strong> 9:00am - 4:00pm</p>
+              <p><strong>Sun</strong> Closed</p>
+            </div>
           </div>
         </div>
+      </div>
+      <div class="bottom-footer container-fluid row w-100 m-0 px-0">
+        <p class="copyright col-12 d-flex justify-content-center align-items-center text-white px-0 pt-2">© 2020 JC
+          Music Store.
+          All rights reserved.</p>
+      </div>
     </footer>
   </div>
 </body>
